[pom] Add java.util to add opens for integration tests